style: Improve L/R btn styling and fix overflowing border

--- a/events/static/events/css/event-card-styles.css
+++ b/events/static/events/css/event-card-styles.css
@@ -155,11 +155,10 @@
     z-index: 100;
     border-radius: 50%;
     overflow: auto;
-    box-shadow: -1px 2px 8px -1px black;
 }
 
-.scroll-control:hover {
-    border: 2px solid white;
+.scroll-control:hover > img {
+    border: 1px solid white;
     cursor: pointer;
 }
 
